# AMM-revision-engineer

./: .gitignore  CLAUDE_HANDOVER.md  README.md  SKILL.md  index.html  pyproject.toml  report.html  requirements.txt
.github/workflows/: pages.yml
amm_engineer/: __init__.py  amp_matcher.py  classifier.py  cli.py  differ.py  models.py  parser.py  reporter.py
references/: ata_chapters.md  aviation_glossary.md  excel_template_guide.md  parsing_guide.md
sample_data/: README.md
sample_data/amm_revisions/: cessna172_amm_rev15_excerpt.txt  cessna172_amm_rev21_excerpt.txt
sample_data/amp_excel/: sample_AMP_cessna172.xlsx
tests/: test_amp_matcher.py  test_classifier.py  test_differ.py  test_parser.py  test_reporter.py
