[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "amm-revision-engineer"
version = "1.0.0"
description = "AI agent for AMM revision delta analysis — MRO and CAMO contexts"
authors = [{ name = "Emin Öztürk", email = "kayasulenur@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "thefuzz>=0.20.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
amm-engineer = "amm_engineer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["amm_engineer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
